syntax = "proto3";

package user;

service UserService {
    rpc create (CreateRequest) returns (User) {}
    rpc findAll (Empty) returns (FindAllResponse) {}
    rpc findById (Id) returns (User) {}
    rpc update (UpdateRequest) returns (User) {}
    rpc delete (Id) returns (DeleteResponse) {}
}

message Empty {
}

message User{
    string id = 1;
    string account = 2;
    string username = 3;
    string password = 4;
}

message CreateRequest{
    string account = 1;
    string username = 2;
    string password = 3;
}

message UpdateRequest{
    string id = 1;
    string account = 2;
    string username = 3;
    string password = 4;
}

message FindAllResponse{
    repeated User Users = 1;
}

message DeleteResponse {
    bool success = 1;
}
message Id{
    string id = 1;
}
